# PolygonDust

./: .clangd  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.coverage  LICENSE  PolygonDust-gtest[1]_include.cmake  PolygonDust.pyi  README.md  README.rst  polygon1.chal  polygon10.chal  polygon2.chal  polygon3.chal  polygon4.chal  polygon5.chal  polygon6.chal  polygon7.chal  polygon8.chal  polygon9.chal  pyproject.toml  requirements.txt  setup.py  setup.sh
.github/workflows/: build-and-test.yaml  codecov.yml
cpp/: GaussianBlur.h  Polygon.hpp  main_pyb.cpp  point.cpp  point.hpp  point_pyb.hpp  polygon.cpp  polygon.hpp  polygon_pyb.cpp  polygon_pyb.hpp  utility.hpp  vector.hpp
includes/: line.hpp  point.hpp  point_pyb.hpp  polygon.hpp  polygon_clipping.hpp  polygon_pyb.hpp  rasterization.hpp  rasterization_cells.hpp  rasterization_cells_pyb.hpp  rasterization_context.hpp  rasterization_context_pyb.hpp  shared.hpp  vectorization_context.hpp  vectorization_result.hpp
polygondust/: main.py
polygondust/data_process/: raw_input.py  shapefile_input.py  waveform_input.py
polygondust/draw_util/: rasterization_graphic_context.py
polygondust/vectorization/: vectorization_context.py
pyb_includes/: point_pyb.hpp  polygon_pyb.hpp  rasterization_context_pyb.hpp  vectorization_context_pyb.hpp
scripts/: coverage.sh
shapefile/: NYCU_Campus.shp  NYCU_Campus.shx  Zhuhu.shp  Zhuhu.shx
src/: main_pyb.cpp  point.cpp  polygon.cpp
tests/cpp/: ut_line.cpp  ut_point.cpp  ut_polygon.cpp  ut_polygon_clipping.cpp  ut_rasterization.cpp  ut_rasterization_cells.cpp  ut_rasterization_context.cpp  ut_utility.cpp  ut_vector.cpp  ut_vectorization.cpp
